# metric_optimization

./: CMakeLists.txt  README.md  package.xml
include/metric_optimization/optimization/: problem.h
include/metric_optimization/robot/: panda_rbdl_model.h  robot_model.h  test.h
scripts/: TFBroadcaster.py  grasping_point.py  moveit_planner.py  part.py
src/metric_optimization/: main.cpp  penalty.cpp  test.cpp
src/metric_optimization/optimization/: problem.cpp
